--- a/Section_2_Data_Preprocessing/Data_Processing.ipynb
+++ b/Section_2_Data_Preprocessing/Data_Processing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,20 +52,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import Imputer"
+    "from sklearn.impute import SimpleImputer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imputer = Imputer(missing_values='NaN')"
+    "imputer = SimpleImputer(missing_values=np.nan, strategy='mean', verbose=1)\n",
+    "imputer = imputer.fit(X[:, 1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X[:, 1:3] = imputer.transform(X[:, 1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 63777.77777777778]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' 38.77777777777778 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
    ]
   }
  ],
