data_processing final

--- a/Section_2_Data_Preprocessing/Data_Processing.ipynb
+++ b/Section_2_Data_Preprocessing/Data_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read dataset\n",
+    "\n",
     "dataset = pd.read_csv('Data.csv')\n",
     "X = dataset.iloc[:, :-1].values\n",
     "y = dataset.iloc[:, 3].values"
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,17 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# handle missing data\n",
+    "\n",
     "imputer = SimpleImputer(missing_values=np.nan, strategy='mean', verbose=1)\n",
     "imputer = imputer.fit(X[:, 1:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +106,83 @@
    ],
    "source": [
     "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 44.0 72000.0]\n",
+      " [2 27.0 48000.0]\n",
+      " [1 30.0 54000.0]\n",
+      " [2 38.0 61000.0]\n",
+      " [1 40.0 63777.77777777778]\n",
+      " [0 35.0 58000.0]\n",
+      " [2 38.77777777777778 52000.0]\n",
+      " [0 48.0 79000.0]\n",
+      " [1 50.0 83000.0]\n",
+      " [0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# there are 2 columns which are categorical\n",
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "\n",
+    "labelencoder_X = LabelEncoder()\n",
+    "X[:, 0] = labelencoder_X.fit_transform(X[:, 0])\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hon89\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:363: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+      "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
+      "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
+      "  warnings.warn(msg, FutureWarning)\n",
+      "C:\\Users\\hon89\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:385: DeprecationWarning: The 'categorical_features' keyword is deprecated in version 0.20 and will be removed in 0.22. You can use the ColumnTransformer instead.\n",
+      "  \"use the ColumnTransformer instead.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "onehotencoder = OneHotEncoder(categorical_features=[0])\n",
+    "X = onehotencoder.fit_transform(X).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 1 1 0 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "labelencoder_y = LabelEncoder()\n",
+    "y = labelencoder_y.fit_transform(y)\n",
+    "\n",
+    "print(y)"
    ]
   }
  ],
