--- a/Section_2_Data_Preprocessing/Data_Processing.ipynb
+++ b/Section_2_Data_Preprocessing/Data_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -95,9 +95,9 @@
       " ['Spain' 27.0 48000.0]\n",
       " ['Germany' 30.0 54000.0]\n",
       " ['Spain' 38.0 61000.0]\n",
-      " ['Germany' 40.0 63777.77777777778]\n",
+      " ['Germany' 40.0 nan]\n",
       " ['France' 35.0 58000.0]\n",
-      " ['Spain' 38.77777777777778 52000.0]\n",
+      " ['Spain' nan 52000.0]\n",
       " ['France' 48.0 79000.0]\n",
       " ['Germany' 50.0 83000.0]\n",
       " ['France' 37.0 67000.0]]\n"
@@ -110,23 +110,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 44.0 72000.0]\n",
-      " [2 27.0 48000.0]\n",
-      " [1 30.0 54000.0]\n",
-      " [2 38.0 61000.0]\n",
-      " [1 40.0 63777.77777777778]\n",
-      " [0 35.0 58000.0]\n",
-      " [2 38.77777777777778 52000.0]\n",
-      " [0 48.0 79000.0]\n",
-      " [1 50.0 83000.0]\n",
-      " [0 37.0 67000.0]]\n"
+      "[[1.00000000e+00 0.00000000e+00 0.00000000e+00 4.40000000e+01\n",
+      "  7.20000000e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 2.70000000e+01\n",
+      "  4.80000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 3.00000000e+01\n",
+      "  5.40000000e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 3.80000000e+01\n",
+      "  6.10000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 4.00000000e+01\n",
+      "  6.37777778e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 3.50000000e+01\n",
+      "  5.80000000e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 3.87777778e+01\n",
+      "  5.20000000e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 4.80000000e+01\n",
+      "  7.90000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 5.00000000e+01\n",
+      "  8.30000000e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 3.70000000e+01\n",
+      "  6.70000000e+04]]\n"
      ]
     }
    ],
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -183,6 +193,41 @@
     "y = labelencoder_y.fit_transform(y)\n",
     "\n",
     "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# feature scaling\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "sc_X = StandardScaler()\n",
+    "# pay attention to X_train, that we also scale the dummy variables\n",
+    "# may not need\n",
+    "X_train = sc_X.fit_transform(X_train)\n",
+    "X_test = sc_X.transform(X_test)\n",
+    "# note that we don't scale the y_train and y_test"
    ]
   }
  ],
